[tool.poetry]
name = "monzo-users"
version = "0.1.0"
description = ""
authors = ["James Jarvis <git@jamesjarvis.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
